tests/ui/fail/method_abi.stderr
error: #[extern_trait] does not support non-Rust ABI
 --> tests/ui/fail/method_abi.rs:5:5
  |
5 |     extern "C" fn value(&self) -> i32;
  |     ^^^^^^^^^^
